[project]
name = "memorycore-orchestrator"
version = "0.1.0"
description = "Simple plan and promotions agent built with a lightweight ADK-inspired runtime"
authors = ["MemoryCore Contributors <example@example.com>"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.1",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
